--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 h1, h2, h3, h4, h5, h6, p, ul {
   margin: 0;
 	padding: 0;
@@ -16,8 +15,23 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 body {
-  background-color: white;
   font-family: var(--base-font);
+}
+
+.header {
+  display: flex;
+}
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 93px;
 }
 
 .logo-title {
@@ -35,7 +49,11 @@ body {
 }
 
 .nav-list {
-  list-style-type: none;
+    list-style-type: none;
+    list-style-type: none;
+    display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .nav-item {
@@ -45,7 +63,17 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+  margin-right: 50px;
 }
+
+
+/* .nav-item:not(:last-child) {
+  margin-right: 50px;
+
+  OR
+
+  flex-basis: calc((100 - 2 * 50px)/2);
+}  */
 
 .nav-item:hover, .nav-item:focus {
   color: var(--second-font-color);
@@ -53,6 +81,13 @@ body {
 
 .nav-item.studio-item {
   color: var(--second-font-color);
+}
+
+.contact {
+  display: flex;
+  margin-left: auto;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .contact-mail, .contact-tel {
@@ -63,6 +98,10 @@ body {
   font-weight: 500;
 }
 
+.contact-tel {
+  margin-left: 50px;
+}
+
 .contact-mail:hover, .contact-mail:focus,
 .contact-tel:hover, .contact-tel:focus
 {
@@ -71,9 +110,11 @@ body {
 
 .hero {
   background-color: #2F303A;
+  height: 600px;
 }
 
 .hero-title {
+  display: flex;
   font-size: 44px;
   font-weight: 900;
   line-height: 1.36;
@@ -81,25 +122,43 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   color: #FFFFFF;
+  justify-content: center;
+  padding-top: 200px;
 }
 
 .button {
+  display: flex;
   background-color: var(--second-font-color);
   font-family: var(--base-font);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  text-align: center;
   letter-spacing: 0.06em;
   color: #FFFFFF;
+  border-radius: 4px;
+  justify-content: center;
+  margin-top: 30px;
+  outline: 1px solid red;
 }
 
 .button:hover {
   background-color:  #188CE8;
 }
 
+/* ADVANTAGES SECTION */
 .advant {
   list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  /* margin-left: -30px; */
+  margin-top: 94px;
+  width: 1200px;
+}
+
+.advant > .advant-item {
+  font-family: var(--base-font);
+  margin-left: 30px;
+  flex-basis: calc(100% / 4 - 30px);
 }
 
 .advant-item-title {
@@ -110,10 +169,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
-}
-
-.advant-item {
-  font-family: var(--base-font);
+  margin-bottom: 10px;;
 }
 
 .advant-item-description {
@@ -123,17 +179,33 @@ body {
   color:var(--base-font-color);
 }
 
+/* WWD SECTION */
 .wwd-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.66;
   letter-spacing: 0.03em;
+  display: flex;
+  justify-content: center;
 }
 
 .wwd-item {
   list-style-type: none;
+  margin-left: 30px;
 }
 
+.wwd-list{
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: -30px;
+}
+
+.wwd {
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+
+/* TEAM SECTION */
 .team-title {
   font-weight: 700;
   font-size: 36px;
@@ -141,8 +213,31 @@ body {
   letter-spacing: 0.03em;
 }
 
+
+.team {
+  background-color: #F5F4FA;
+}
+
+.team-list {
+  display: flex;
+  padding-bottom: 94px;
+} 
+
 .team-item {
   list-style-type: none;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-item:not(:first-child) {
+  margin-left: 30px;
+}
+
+.team-title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+  padding-top: 94px;
 }
 
 .team-name {
@@ -151,6 +246,8 @@ body {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 .team-position {
@@ -158,21 +255,36 @@ body {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--base-font-color);
+  padding-bottom: 30px; 
 }
 
 
 .footer {
-  background-color: #2F303A;;
+  background-color: #2F303A;
+  display: flex;
 }
+
+.f-address {
+  padding-bottom: 60px;
+}
+
+.logo-title {
+  padding-top: 60px;
+  display: block;
+  margin-bottom: 20px;
+}
+
 .footer-logo-span {
   color: white;
 }
+
 .footer-address {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #FFFFFF;
   font-style: normal;
+  margin-bottom: 9px;
 }
 
 .footer-address, .footer-mail, 
@@ -186,24 +298,13 @@ body {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
+  display: block;
 }
 
-/* .address-info {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  font-style: normal;
+.footer-mail {
+  margin-bottom: 9px;
 }
 
- .addres-info.mail, .addres-info.tel {
-  color: rgba(255, 255, 255, 0.6);
-  text-decoration: none;
-}
-
-.addres-info.address {
-  color: #FFFFFF;
-}
- */
 
  .filter-items {
   text-decoration: none;
