--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,7 +243,6 @@ header {
 }
 
 .team-title {
- 
   margin-bottom: 50px;
   padding-top: 94px;
   text-align: center;
@@ -335,10 +334,13 @@ header {
   text-decoration: none;
   list-style-type: none;
   cursor: pointer;
+  margin-left: -8px;
  }
 
  .filter-item {
   display: flex;
+  margin-left: 8px;
+  flex-basis: calc(100% / 5 - 8px);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -349,13 +351,8 @@ header {
   border-color: transparent;
  }
 
- .filter-item {
-  margin-left: 8px;
-}
-
 /* .filter-item:not(:first-child) {
-  margin-left: 30px;
-} */
+}  */
 
 
  .filter-item:hover, .filter-item:focus {
@@ -377,7 +374,7 @@ header {
   text-decoration: none;
   list-style-type: none;
   cursor: pointer;
-  padding-top: 94px;
+  padding-top: 50px;
   padding-bottom: 94px;
   margin-left: -30px;
   margin-bottom: -30px;
