--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,16 +41,14 @@ header {
   padding-top: 24px;
   padding-bottom: 25px;
 }
+.logo {
+  margin-right: 93px;
+}
 
 .logo,
 .nav,
 .contact {
   align-items: center;
-}
-
-.logo {
-  margin-right: 93px;
-  display: flex;
 }
 
 .logo-title {
@@ -77,36 +75,26 @@ header {
   display: flex;
 }
 
-.nav-item {
-  text-decoration: none;
-  color: var(--title-font-color);
-  font-family: var(--base-font);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+.nav-item:not(:last-child) {
   margin-right: 50px;
-}
-
-/* .nav-item:not(:last-child) {
-  margin-right: 50px;
-
-  OR
-
-  flex-basis: calc((100 - 2 * 50px)/2);
-}  */
-
-.nav-item:hover,
-.nav-item:focus {
-  color: var(--second-font-color);
-}
-
-.nav-item.studio-item {
-  color: var(--second-font-color);
 }
 
 .contact {
   display: flex;
   margin-left: auto;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: var(--title-font-color);
+  font-family: var(--base-font);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.17;
+}
+
+.nav-link.studio:active {
+  color: var(--second-font-color);
 }
 
 .contact-mail,
@@ -123,9 +111,7 @@ header {
 }
 
 .contact-mail:hover,
-.contact-mail:focus,
-.contact-tel:hover,
-.contact-tel:focus {
+.contact-mail:focus {
   color: var(--second-font-color);
 }
 
@@ -287,6 +273,7 @@ header {
   padding-bottom: 30px;
 }
 
+/* PORTFOLIO FILTER SECTION */
 .filter {
   display: flex;
   justify-content: center;
@@ -302,10 +289,7 @@ header {
   margin-left: -8px;
 }
 
-.filter-item {
-  display: flex;
-  margin-left: 8px;
-  flex-basis: calc(100% / 5 - 8px);
+.filter-button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -314,20 +298,27 @@ header {
   background: #f5f4fa;
   border-radius: 4px;
   border-color: transparent;
+  padding: 6px 22px;
 }
 
-/* .filter-item:not(:first-child) {
-}  */
+.filter-button.all:active {
+  background-color: var(--second-font-color);
+  color: #ffffff;
+}
 
-.filter-item:hover,
-.filter-item:focus {
+.filter-item {
+  display: flex;
+}
+
+.filter-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.filter-button:hover,
+.filter-button:focus {
   cursor: pointer;
   border: 1px solid var(--title-font-color);
-}
-
-.filter-item:active {
-  background: var(--second-font-color);
-  color: #ffffff;
+  border-radius: 4px;
 }
 
 .portfolio {
@@ -341,13 +332,19 @@ header {
   cursor: pointer;
   padding-top: 50px;
   padding-bottom: 94px;
-  margin-left: -30px;
-  margin-bottom: -30px;
+}
+
+.portfolio-item:nth-child(n + 6) {
+  margin-bottom: 0;
+}
+
+.portfolio-item:nth-child(3n + 3) {
+  margin-right: 0;
 }
 
 .portfolio-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
+  /* flex-basis: calc(100% / 3 - 30px); */
+  margin-right: 30px;
   margin-bottom: 30px;
   flex-direction: column;
   outline: 1px solid #eeeeee;
@@ -391,9 +388,6 @@ header {
 .footer-info {
   padding-top: 60px;
   padding-bottom: 60px;
-}
-
-.f-address {
 }
 
 .footer-logo-title {
