--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,6 +120,15 @@ header {
   height: 600px;
 }
 
+.hero-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+
 .hero-title {
   font-size: 44px;
   font-weight: 900;
@@ -128,14 +137,6 @@ header {
   text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
-  padding-top: 200px;
-}
-
-.hero-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 
 .button {
@@ -148,6 +149,7 @@ header {
   color: #ffffff;
   border-radius: 4px;
   margin-top: 30px;
+  padding: 10px 32px;
 }
 
 .button:hover {
