--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,6 +302,7 @@ header {
   list-style-type: none;
   cursor: pointer;
   margin-left: -8px;
+  margin-bottom: 50px;
 }
 
 .filter-button {
@@ -338,7 +339,7 @@ header {
 
 .portfolio {
   display: flex;
-  padding-top: 50px;
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 .portfolio-items {
@@ -347,18 +348,20 @@ header {
   text-decoration: none;
   list-style-type: none;
   cursor: pointer;
+  margin-right: -30px;
+  margin-bottom: -30px;
 }
 
-.portfolio-item:nth-child(n + 6) {
+/* .portfolio-item:nth-child(n + 6) {
   margin-bottom: 0;
 }
 
 .portfolio-item:nth-child(3n + 3) {
   margin-right: 0;
-}
+} */
 
 .portfolio-item {
-  /* flex-basis: calc(100% / 3 - 30px); */
+  flex-basis: calc(100% / 3 - 30px);
   margin-right: 30px;
   margin-bottom: 30px;
   flex-direction: column;
@@ -396,11 +399,8 @@ header {
 
 /* FOOTER */
 
-.footer {
+footer {
   background-color: #2f303a;
-}
-
-.footer-info {
   padding-top: 60px;
   padding-bottom: 60px;
 }
